paas/fabric8/openshift/grooshella-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: ec88fb5b62520b1446f77a8671574326bdda0293
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: feature/fabric8-deployment
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=grooshella&var-version=0.1.0-SNAPSHOT
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/grooshella
  labels:
    app: grooshella
    provider: fabric8
    version: 0.1.0-SNAPSHOT
    group: com.defimak47
  name: grooshella
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: grooshella
    provider: fabric8
    group: com.defimak47
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: ec88fb5b62520b1446f77a8671574326bdda0293
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=grooshella&var-version=0.1.0-SNAPSHOT
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/grooshella
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: feature/fabric8-deployment
        fabric8.io/scm-tag: HEAD
      labels:
        app: grooshella
        provider: fabric8
        version: 0.1.0-SNAPSHOT
        group: com.defimak47
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: grooshella:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: grooshella:latest
    type: ImageChange
