paas/fabric8/openshift/grooshella-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: grooshella
    provider: fabric8
    version: 0.1.0-SNAPSHOT
    group: com.defimak47
  name: grooshella
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: grooshella
